// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Solid target > Button fixture 1`] = `
"import { createSignal } from 'solid-js';

export function Button(props) {
  const [pressed, setPressed] = createSignal(false);

  return (
    <button class={pressed() ? "pressed" : "idle"} onClick={() => setPressed(true)}>
      {props.label}
    </button>
  );
}
"
`;

exports[`Solid target > Card fixture 1`] = `
"import { Show } from 'solid-js';

export function Card(props) {

  return (
    <div class="card">
      <Show when={slots.header}>
        <div class="card-header">
          {props.header}
        </div>
      </Show>
      <div class="card-body">
        {props.children}
      </div>
      <Show when={slots.footer}>
        <div class="card-footer">
          {props.footer?.({ count: 3 })}
        </div>
      </Show>
    </div>
  );
}
"
`;

exports[`Solid target > Conditional fixture 1`] = `
"import { Show, createSignal } from 'solid-js';

export function Conditional() {
  const [isVisible, setIsVisible] = createSignal(false);
  const [count, setCount] = createSignal(0);

  return (
    <div>
      <Show when={isVisible()} fallback={<p>
  Content is hidden
</p>}>
        <p>
          Content is visible
        </p>
      </Show>
      <Show when={count() > 0}>
        <span>
          Count: 
          {count()}
        </span>
      </Show>
      <Show when={isVisible()} fallback={<button onClick={() => setIsVisible(true)}>Show</button>}>
        <button onClick={() => setIsVisible(false)}>
          Hide
        </button>
      </Show>
      <button onClick={() => setCount(count() + 1)}>
        Increment
      </button>
    </div>
  );
}
"
`;

exports[`Solid target > Counter fixture 1`] = `
"import { createEffect, createMemo, createSignal } from 'solid-js';

export function Counter() {
  const [count, setCount] = createSignal(0);
  const doubled = createMemo(() => count() * 2);
  createEffect(() => {
  console.log("count is", count());
});

  return (
    <div>
      <p>
        {count()}
      </p>
      <p>
        {doubled()}
      </p>
      <button onClick={() => setCount(count() + 1)}>
        +1
      </button>
    </div>
  );
}
"
`;

exports[`Solid target > ForLoop fixture 1`] = `
"import { For, createSignal } from 'solid-js';

export function ForLoop() {
  const [items, setItems] = createSignal([]);

  return (
    <ul>
      <For each={items()}>
        {(item, index) => (
        <li key={item.id}>
          {index + 1}
          . 
          {item.label}
        </li>
        )}
      </For>
    </ul>
  );
}
"
`;

exports[`Solid target > FormField fixture 1`] = `
"import { createSignal, onMount } from 'solid-js';

export function FormField() {
  const [name, setName] = createSignal("");
  const [country, setCountry] = createSignal("us");
  const [bio, setBio] = createSignal("");
  let inputRef: HTMLInputElement | undefined;
  onMount(() => {
  inputRef.current?.focus();
});

  return (
    <form>
      <label>
        
        Name
        
        <input value={name()} type="text" onInput={event => setName(event.target.value)} ref={inputRef} />
      </label>
      <label>
        
        Country
        
        <select value={country()} onChange={event => setCountry(event.target.value)}>
          <option value="us">
            United States
          </option>
          <option value="eu">
            European Union
          </option>
          <option value="uk">
            United Kingdom
          </option>
        </select>
      </label>
      <label>
        
        Bio
        
        <textarea value={bio()} rows={4} onInput={event => setBio(event.target.value)} />
      </label>
    </form>
  );
}
"
`;

exports[`Solid target > Lifecycle fixture 1`] = `
"import { createEffect, createMemo, createSignal, onCleanup, onMount } from 'solid-js';

export function Lifecycle() {
  const [count, setCount] = createSignal(0);
  const [title, setTitle] = createSignal("Inkline");
  const heading = createMemo(() => \`\${title()} — \${count()}\`);
  createEffect(() => {
  const id = setInterval(() => setCount(count() + 1), 1000);
  return () => clearInterval(id);
});
  createEffect(() => {
  document.title = heading();
});
  onMount(() => {
  document.title = heading();
});
  onCleanup(() => {
  document.title = "Inkline";
});

  return (
    <div>
      <h1 style={{ fontWeight: count() > 10 ? "bold" : "normal" }}>
        {heading()}
      </h1>
      <p>
        Count: 
        {count()}
      </p>
      <button onClick={() => setCount(0)}>
        Reset
      </button>
      <button onClick={() => setTitle("Updated")}>
        Change Title
      </button>
    </div>
  );
}
"
`;

exports[`Solid target > List fixture 1`] = `
"import { For, createSignal } from 'solid-js';

export function List() {
  const [items, setItems] = createSignal([]);

  return (
    <ul>
      <For each={items()}>
        {(item) => (
        <li key={item.id}>
          {item.name}
        </li>
        )}
      </For>
    </ul>
  );
}
"
`;

exports[`Solid target > SwitchTabs fixture 1`] = `
"import { Match, Switch, createSignal } from 'solid-js';

export function SwitchTabs() {
  const [activeTab, setActiveTab] = createSignal("home");

  return (
    <div>
      <nav>
        <button onClick={() => setActiveTab("home")}>
          Home
        </button>
        <button onClick={() => setActiveTab("profile")}>
          Profile
        </button>
        <button onClick={() => setActiveTab("settings")}>
          Settings
        </button>
      </nav>
      <Switch fallback={<p>Unknown tab.</p>}>
        <Match when={activeTab() === "home"}>
          <section>
            <h2>
              Home
            </h2>
            <p>
              Welcome to the home page.
            </p>
          </section>
        </Match>
        <Match when={activeTab() === "profile"}>
          <section>
            <h2>
              Profile
            </h2>
            <p>
              Your profile details go here.
            </p>
          </section>
        </Match>
        <Match when={activeTab() === "settings"}>
          <section>
            <h2>
              Settings
            </h2>
            <p>
              Configure your preferences here.
            </p>
          </section>
        </Match>
      </Switch>
    </div>
  );
}
"
`;
